--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -11,6 +11,12 @@
         font-size: 2.5rem;
         font-weight: bold;
     }
+    img{
+        height: 100%;
+        padding: 8px;
+        box-shadow: 2px 2px 6px #b2b2b3;
+    }
+
 }
 
 // Search Bar
@@ -27,6 +33,18 @@
     -webkit-box-shadow: 2px 3px 10px #b2b2b3;
 	-moz-box-shadow: 2px 3px 10px #b2b2b3;
     box-shadow: 2px 3px 10px #b2b2b3;
+
+    .styleGrey{
+        color: #9a9a9a;
+    }
+}
+
+.modal{
+    img{
+        height: 100%;
+        padding: 8px;
+        box-shadow: 2px 2px 6px #b2b2b3;
+    }
     .styleGrey{
         color: #9a9a9a;
     }
