--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -11,6 +11,10 @@
         font-size: 2.5rem;
         font-weight: bold;
     }
+    h2{
+        font-size: 2rem;
+        font-weight: bold;
+    }
     img{
         height: 100%;
         padding: 8px;
